--- a/index.html
+++ b/index.html
@@ -9,6 +9,52 @@
 <div id="app">
     {{ message }}
 </div>
+
+<div id="app-2">
+  <span v-bind:title="message">
+    Passez votre souris sur moi pendant quelques secondes
+    pour voir mon titre lié dynamiquement !
+  </span>
+</div>
+
+<div id="app-3">
+    <p v-if="seen">Maintenant vous me voyez</p>
+</div>
+
+<div id="app-4">
+    <ol>
+        <li v-for="todo in todos">
+            {{ todo.text }}
+        </li>
+    </ol>
+</div>
+
+<div id="app-5">
+    <p>{{ message }}</p>
+    <button v-on:click="reverseMessage">Message retourné</button>
+</div>
+
+<div id="app-6">
+    <p>{{ message }}</p>
+    <input v-model="message">
+</div>
+
+<div id="app-7">
+    <ol>
+        <!--
+          Maintenant nous fournissons à chaque todo-item l'objet todo
+          qu'il représente de manière à ce que son contenu puisse être dynamique.
+          Nous avons également besoin de fournir à chaque composant une « clé »,
+          mais nous expliquerons cela plus tard.
+        -->
+        <todo-item
+                v-for="item in groceryList"
+                v-bind:todo="item"
+                v-bind:key="item.id"
+        ></todo-item>
+    </ol>
+</div>
+
 </body>
 
 <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
